# oddfish

./: Cargo.toml
mousetoria/: Cargo.toml
mousetoria/assets/: map1.json  tiles.json
mousetoria/schemas/: map.json
mousetoria/src/: main.rs  map.rs
mx/: Cargo.toml
mx/src/: builtins.rs  bytecode.rs  context.rs  lib.rs  main.rs  number.rs  ops.rs  parser.rs  primitive.rs  table.rs  types.rs  value.rs
slayer/: Cargo.toml
slayer/assets/base/: init.rhai
slayer/assets/trinket/: 0000_leg.rhai
slayer/src/: main.rs  script.rs
taulunen/: Cargo.toml
taulunen/src/: index_storage.rs  item.rs  lib.rs  main.rs  query.rs  table.rs  value.rs
