[package]
name = "slayer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13"
rhai = { version = "1.17.1", features = ["sync"] }
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.57"
toml = "0.8.10"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
